# QSpace

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt
includes/: ConstantsParametrs.h  mainwindow.h
includes/Converter/: AgregateStructures.h  Converter.h  Converter.tpp  Converter_DarkMatter.h  Converter_Gas.h  Converter_MolecularClouds.h  Converter_Stars.h  Converter_YoungStars.h  DataStorage.h  IConverter_Hydrodinamics.h  IConverter_Hydrodinamics.tpp  IConverter_NbodyOnly.h
includes/Plot/Plot3D/: Plot3D.h
src/: main.cpp
src/Converter/Converter/: Converter.cpp  Converter_DarkMatter.cpp  Converter_Gas.cpp  Converter_MolecularClouds.cpp  Converter_Stars.cpp  Converter_YoungStars.cpp  IConverter_NbodyOnly.cpp
src/Converter/DataStorage/: DataStorageVisit.cpp  DataStorage_file_func.cpp  DataStorage_gets.cpp  DataStorage_sets.cpp
src/Plot/Plot3D/: Plot3D.cpp
src/UI/: mainwindow.cpp  mainwindow.ui  mainwindow.ui.autosave  mainwindow_private_methods.cpp  mainwindow_slots.cpp
tests/: CMakeLists.txt  Converter_FUNCTIONAL_TEST.cpp  test_converter_darkmatter.cpp  test_converter_gas.cpp  test_converter_stars.cpp  test_datastorage.cpp
translates/: testProject_ru.ts
